# colony

./: .CLAUDE.md  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  approval_gate_persistence_and_diagnostic_events_plan.md  blackboard_discipline_proposal.md  conftest.py  design_monorepo_integration_plan.md  knowledge_graph_persistence_plan.md  mkdocs.yml  open_source_release_plan.md  pyproject.toml  unified_chat_interface_plan.md  unified_planning_capabilities_design.md
.claude/: settings.json
.claude/hooks/: README.md  read-before-edit.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
configs/: README.md  example.yaml
docs/: contributing.md  index.md
docs/architecture/: action-policies.md  agent-memory-system.md  agent-system.md  blackboard.md  configuration.md  consciousness-streams.md  context-page-sources.md  design-monorepo-authoring.md  design-monorepo-capabilities.md  design-monorepo-extensions.md  distributed.md  execution-context.md  game-engine.md  git-repo-context-page-source.md  github-capability.md  hook-system.md  image-extensions.md  index.md  knowledge-capabilities.md  literature-context-page-source.md  live-context.md  memory-system.md  multimodal-pdf-ingestion.md  observability.md  planning.md  project-substance-authoring.md  repo-map.md  sandboxed-shell-capability.md  tool-capabilities.md  training.md  user-plugin-capability.md  vcm-capability.md  virtual-context-memory.md  web-search-capability.md
docs/design-insights/: abstraction-patterns.md  capabilities-as-aspects.md  game-theoretic-correctness.md  index.md  memory-as-observer.md  page-graphs.md  qualitative-analysis.md
docs/examples/: basic-analysis.md  compliance-audit.md  contract-inference.md  impact-analysis.md  index.md  intent-inference.md  multi-analysis.md  program-slicing.md
docs/getting-started/: concepts.md  example-gallery.md  installation.md  quickstart.md
docs/guides/: action-policy-dimensions.md  capability-setup.md  colony-env.md  connect-github.md  git-attribution.md  github-app-setup.md  protected-branches.md  publishing.md  registering-a-mission.md  training-data.md  web-dashboard.md
docs/philosophy/: agents-all-the-way-down.md  bdi.md  cache-awareness.md  consciousness-intuition.md  index.md  modular-agents.md  no-rag.md
docs/reference/: agent.md  blackboard.md  cli.md  index.md  memory.md  models.md  policies.md
examples/: basic-analysis.yaml  compliance-audit.yaml  contract-inference.yaml  impact-analysis.yaml  intent-inference.yaml  multi-analysis.yaml  program-slicing.yaml
python/colony/: __init__.py  deployment_names.json  deployment_names.py  system.py
python/colony/agents/: __init__.py  base.py  blueprint.py  blueprint_implementation_plan.md  cache_coordination.py  capability_api_refactoring_plan.md  capability_bind_proposal.md  config.py  lifecycle_redesign_plan.md  models.py  routing.py  self_concept.py  spawn_pipeline_audit.md  standalone.py  system.py
python/colony/cli/: polymath  polymath.py
python/colony/cluster/: README.md  __init__.py  anthropic_deployment.py  cluster.py  config.py  embedding_deployment.py  (+8 more)
python/colony/web_ui/: dashboard_plan.md  log_streaming_plan.md  phase2_plan.md  pyproject.toml
python/colony/web_ui/backend/: config.py  dependencies.py  main.py
python/colony/web_ui/backend/models/: api_models.py
python/colony/web_ui/backend/routers/: agents.py  blackboard.py  deployments.py  infrastructure.py  logs.py  metrics.py  page_graph.py  sessions.py  traces.py  vcm.py
python/colony/web_ui/backend/services/: colony_connection.py  redis_service.py
python/colony/web_ui/backend/streaming/: sse.py
python/colony/web_ui/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
python/colony/web_ui/frontend/src/: index.css  main.tsx
python/colony/web_ui/frontend/src/api/: client.ts  types.ts
python/colony/web_ui/frontend/src/api/hooks/: useAgents.ts  useBlackboard.ts  useDeployments.ts  useLogStream.ts  useMetrics.ts  usePageGraph.ts  usePrometheus.ts  useTraces.ts  useVCM.ts
python/colony/web_ui/frontend/src/components/agents/: AgentsTab.tsx
python/colony/web_ui/frontend/src/components/blackboard/: BlackboardTab.tsx
python/colony/web_ui/frontend/src/components/dashboard/: OverviewTab.tsx
python/colony/web_ui/frontend/src/components/graph/: PageGraphTab.tsx
python/colony/web_ui/frontend/src/components/layout/: AppShell.tsx  StatusBar.tsx  TabBar.tsx
python/colony/web_ui/frontend/src/components/logs/: LogsTab.tsx
python/colony/web_ui/frontend/src/components/observability/: MetricsTab.tsx  TracesTab.tsx
python/colony/web_ui/frontend/src/components/sessions/: SessionsTab.tsx
python/colony/web_ui/frontend/src/components/shared/: Badge.tsx  DataTable.tsx  MetricCard.tsx
python/colony/web_ui/frontend/src/components/vcm/: VCMTab.tsx
src/: conftest.py
src/polymathera/colony/design_monorepo/scaffolds/c_library/: .gitignore  CMakeLists.txt  README.md  manifest.json
src/polymathera/colony/design_monorepo/scaffolds/c_library/include/: ${name_snake}.h
src/polymathera/colony/design_monorepo/scaffolds/c_library/src/: ${name_snake}.c
src/polymathera/colony/design_monorepo/scaffolds/c_library/tests/: test_smoke.c
src/polymathera/colony/design_monorepo/scaffolds/cmake_project/: CMakeLists.txt  README.md  manifest.json
src/polymathera/colony/design_monorepo/scaffolds/cmake_project/include/: ${name_snake}.hpp
src/polymathera/colony/design_monorepo/scaffolds/cmake_project/src/: ${name_snake}.cpp
src/polymathera/colony/design_monorepo/scaffolds/cmake_project/tests/: test_smoke.cpp
src/polymathera/colony/design_monorepo/scaffolds/python_lib/: .gitignore  LICENSE  README.md  manifest.json  pyproject.toml
src/polymathera/colony/design_monorepo/scaffolds/python_lib/src/${name_snake}/: __init__.py  core.py
src/polymathera/colony/design_monorepo/scaffolds/python_lib/tests/: test_smoke.py
test_runs/: my_analysis.yaml
tests/: my_analysis.yaml
(+1201 files in other folders)
