[tool.poetry]
name = "colony"
version = "0.1.0"
description = "Polymathera's no-RAG, multi-agent framework for extremely long, dense contexts (1B+ tokens)."
authors = ["Ahmed Nassar <amam.nassar@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
msgpack = "^1.1.2"
sqlalchemy = "^2.0.46"
sqlmodel = "^0.0.32"
overrides = "^7.7.0"
networkx = "^3.6.1"
docker = "^7.1.0"
termcolor = "^3.3.0"
rich = "^14.3.2"
ipython = "^9.10.0"
numpy = "^2.4.2"
redis = "^7.1.0"
aiofiles = "^25.1.0"
aiohttp = "^3.13.3"



[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-benchmark = "^5.2.3"
pytest-timeout = "^2.4.0"
pytest-mock = "^3.15.1"
pytest-redis = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
