[tool.poetry]
name = "colony"
version = "0.1.0"
description = "Polymathera's no-RAG, multi-agent framework for extremely long, dense contexts (1B+ tokens)."
authors = ["Ahmed Nassar <amam.nassar@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
ray = {extras = ["data", "serve", "train", "tune"], version = "=2.49.0"}
msgpack = "^1.1.2"
sqlalchemy = "^2.0.46"
sqlmodel = "^0.0.32"
overrides = "^7.7.0"
networkx = "^3.6.1"
docker = "^7.1.0"
termcolor = "^3.3.0"
rich = "^14.3.2"
ipython = "^9.10.0"
numpy = ">=1.21.0,<2.3"
redis = "^7.1.0"
aiofiles = "^25.1.0"
aiohttp = "^3.13.3"
circuitbreaker = "^2.1.3"
tenacity = "^9.1.3"
pyyaml = "^6.0.3"
cachetools = "^7.0.0"
python-magic = { version = "^0.4.27", optional = true }
tree-sitter = { version = "^0.25.2", optional = true }
chardet = { version = "^5.2.0", optional = true }
nbformat = { version = "^5.10.4", optional = true }
markdown = { version = "^3.10.1", optional = true }
astor = { version = "^0.8.1", optional = true }
sqlparse = { version = "^0.5.5", optional = true }
html2text = { version = "^2025.4.15", optional = true }
psutil = { version = "^7.2.2", optional = true }
python-louvain = { version = "^0.16", optional = true }
pillow = { version = "^12.1.0", optional = true }
xxhash = { version = "^3.6.0", optional = true }
toml = { version = "^0.10.2", optional = true }
zstandard = { version = "^0.25.0", optional = true }
gitpython = { version = "^3.1.46", optional = true }
pygithub = { version = "^2.8.1", optional = true }
# PyTorch 2.8.0 with CUDA 12.8 (matching rayproject/ray:2.49.0-py311-cu128 base image)
torch = {version = "2.8.0+cu128", source = "torch", optional = true}
torchvision = {version = "0.23.0+cu128", source = "torch", optional = true}
torchaudio = {version = "2.8.0+cu128", source = "torch", optional = true}
pynvml = { version = "^13.0.1", optional = true }
tiktoken = "^0.12.0"
transformers = { version = "^4.52.4", optional = true }
vllm = { version = "^0.11.0", optional = true }
colorama = "^0.4.6"


[tool.poetry.extras]
code_analysis = [
    "python-magic",
    "tree-sitter",
    "chardet",
    "nbformat",
    "markdown",
    "astor",
    "sqlparse",
    "html2text",
    "psutil",
    "python-louvain",
    "pillow",
    "xxhash",
    "toml",
    "gitpython",
    "pygithub",
]

cache_compression = [
    "zstandard",
]

gpu = [
    "torch",
    "torchvision",
    "torchaudio",
    "pynvml",
    "transformers",
    "vllm",
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-benchmark = "^5.2.3"
pytest-timeout = "^2.4.0"
pytest-mock = "^3.15.1"
pytest-redis = "^3.1.3"

# Source needed by pytorch
[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
