[tool.poetry]
name = "polymathera-colony"
version = "0.1.1"
description = "Polymathera's no-RAG, multi-agent framework for extremely long, dense contexts (1B+ tokens)."
authors = ["Ahmed Nassar <amam.nassar@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/polymathera/colony"
repository = "https://github.com/polymathera/colony"
keywords = ["multi-agent", "llm", "context", "cache-aware", "agents", "no-rag"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "polymathera", from = "src"}]
exclude = [
    "src/**/tests/",
    "src/**/test_*.py",
    "src/**/*_test.py",
    "src/**/*.md",
    "src/**/conftest.py",
    "src/**/cli/deploy/docker/",
    "src/**/cli/deploy/.env",
    "src/**/cli/deploy/.env.template",
    "src/**/web_ui/frontend/node_modules/",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ray = {extras = ["data", "serve", "train", "tune"], version = "=2.49.0"}
msgpack = "^1.1.2"
sqlalchemy = "^2.0.46"
sqlmodel = "^0.0.32"
overrides = "^7.7.0"
networkx = "^3.6.1"
docker = "^7.1.0"
termcolor = "^3.3.0"
rich = "^14.3.2"
ipython = "^9.10.0"
numpy = ">=1.21.0,<2.3"
redis = "^7.1.0"
aiofiles = "^25.1.0"
aiohttp = "^3.13.3"
circuitbreaker = "^2.1.3"
tenacity = "^9.1.3"
pyyaml = "^6.0.3"
cachetools = "^7.0.0"
python-magic = { version = "^0.4.27", optional = true }
tree-sitter = { version = "^0.25.2", optional = true }
chardet = { version = "^5.2.0", optional = true }
nbformat = { version = "^5.10.4", optional = true }
markdown = { version = "^3.10.1", optional = true }
astor = { version = "^0.8.1", optional = true }
sqlparse = { version = "^0.5.5", optional = true }
html2text = { version = "^2025.4.15", optional = true }
psutil = { version = "^7.2.2", optional = true }
python-louvain = { version = "^0.16", optional = true }
pillow = { version = "^12.1.0", optional = true }
xxhash = { version = "^3.6.0", optional = true }
toml = { version = "^0.10.2", optional = true }
zstandard = { version = "^0.25.0", optional = true }
gitpython = { version = "^3.1.46", optional = true }
pygithub = { version = "^2.8.1", optional = true }
# PyTorch 2.8.0 with CUDA 12.8 (matching rayproject/ray:2.49.0-py311-cu128 base image)
torch = {version = "2.8.0+cu128", source = "torch", optional = true}
torchvision = {version = "0.23.0+cu128", source = "torch", optional = true}
torchaudio = {version = "2.8.0+cu128", source = "torch", optional = true}
pynvml = { version = "^13.0.1", optional = true }
tiktoken = "^0.12.0"
transformers = { version = "^4.52.4", optional = true }
vllm = { version = "^0.11.0", optional = true }
colorama = "^0.4.6"
anthropic = { version = "^0.79.0", optional = true }
etcd3 = { version = "^0.12.0", optional = true }
boto3 = { version = "^1.35.0", optional = true }
botocore = { version = "^1.35.0", optional = true }
aiobotocore = { version = "^2.13.0", optional = true }
typer = {version = "^0.15.0", extras = ["all"]}
prometheus-client = "^0.21.0"
opentelemetry-api = "^1.36.0"
multipledispatch = "^1.0.0"
asyncpg = "^0.31.0"
aiokafka = { version = "^0.12.0", optional = true }
sentence-transformers = { version = "^5.2.2", optional = true }
chromadb = { version = "^1.0.0", optional = true }
openai = { version = "^2.21.0", optional = true }
fastapi = { version = ">=0.115", optional = true }
python-multipart = { version = ">=0.0.9", optional = true }
uvicorn = { version = ">=0.30", extras = ["standard"], optional = true }
httpx = { version = ">=0.27", optional = true }

[tool.poetry.scripts]
colony-env = "polymathera.colony.cli.deploy.cli:app"

[tool.poetry.extras]
code_analysis = [
    "python-magic",
    "tree-sitter",
    "chardet",
    "nbformat",
    "markdown",
    "astor",
    "sqlparse",
    "html2text",
    "psutil",
    "python-louvain",
    "pillow",
    "xxhash",
    "toml",
    "gitpython",
    "pygithub",
]

cache_compression = [
    "zstandard",
]

gpu = [
    "torch",
    "torchvision",
    "torchaudio",
    "pynvml",
    "transformers",
    "vllm",
]

cpu = [
    "anthropic",
    "openai",
    "sentence-transformers",
    "chromadb",
]

distributed = [
    "etcd3",
]

aws = [
    "boto3",
    "botocore",
    "aiobotocore",
]

dashboard = [
    "fastapi",
    "python-multipart",
    "uvicorn",
    "httpx",
]

observability = [
    "aiokafka",
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-benchmark = "^5.2.3"
pytest-timeout = "^2.4.0"
pytest-mock = "^3.15.1"
pytest-redis = "^3.1.3"

mkdocs = "^1.6.1"
mkdocs-material = "^9.7.4"
mkdocstrings = {extras = ["python"], version = "^1.0.3"}
mkdocs-mermaid2-plugin = "^1.2.3"
ruff = "^0.11.0"

# Source needed by pytorch
[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"




[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    #"I",    # isort
    #"UP",   # pyupgrade
    #"B",    # flake8-bugbear
    #"SIM",  # flake8-simplify
    #"TCH",  # flake8-type-checking
    #"W",    # pycodestyle warnings
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module-import-not-at-top (lazy imports are intentional)
    "E701",   # multiple statements on one line
    "E712",   # true-false comparison (== True/False)
    "E721",   # type comparison with == instead of isinstance
    "E722",   # bare except
    "E731",   # lambda assignment
    "E741",   # ambiguous variable name
    "F401",   # unused import (too many re-exports in __init__.py files)
    "F403",   # undefined names from star imports
    "F811",   # redefined while unused (overloads, re-imports)
    "F821",   # undefined name (pre-existing; fix incrementally)
    "F841",   # unused variable (cleanup later)
]

[tool.ruff.lint.isort]
known-first-party = ["polymathera"]

[tool.pytest.ini_options]
testpaths = ["src"]
asyncio_mode = "auto"
timeout = 120
pythonpath = ["src"]
addopts = "--import-mode=importlib"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
